# DMM-STM32

./: .gitignore  ADC.c  ADC.h  ADC_LEDs.axf  ADC_LEDs.build_log.htm  ADC_LEDs.c  ADC_LEDs.htm  ADC_LEDs.lnp  ADC_LEDs.map  ADC_LEDs.plg  ADC_LEDs.uvgui.Administrator  ADC_LEDs.uvguix.Amrik  ADC_LEDs.uvguix.as2010  ADC_LEDs.uvguix.edc1  ADC_LEDs.uvguix.jlr533  ADC_LEDs.uvguix.mv607  ADC_LEDs.uvopt  ADC_LEDs.uvoptx  ADC_LEDs.uvproj.saved_uv4  ADC_LEDs.uvprojx  ADC_LEDs_STM32F407 FLASH.dep  BTN.c  BTN.h  CMakeLists.txt  Calibration Curve.xlsx  Curves.xlsx  DMM.c  DMM.h  Final Offset Curve.xlsx  Pins.xlsx  README.md  SWT.c  adc.crf  adc.d  adc_leds.crf  adc_leds.d  btn.crf  btn.d  capacitance.c  capacitance.h  (+68 more)
Design Files/: Pin Assignments.xlsx
RTE/_STM32F407_FLASH/: RTE_Components.h
Utilities/STM32F407-Discovery/: Release_Notes.html
Utilities/STM32F407-Discovery/MDK-ARM/: Project.uvoptx  Project.uvprojx
Utilities/STM32F407-Discovery/SW4STM32/STM32F401xx/: .cproject
Utilities/STM32F407-Discovery/SW4STM32/STM32F40_41xxx/: .cproject
Utilities/STM32F407-Discovery/SW4STM32/STM32F410xx/: .cproject
Utilities/STM32F407-Discovery/SW4STM32/STM32F411xE/: .cproject
Utilities/STM32F407-Discovery/SW4STM32/STM32F412xG/: .cproject
Utilities/STM32F407-Discovery/SW4STM32/STM32F413_423xx/: .cproject
Utilities/STM32F407-Discovery/SW4STM32/STM32F427_437xx/: .cproject  STM32F437IIHx_FLASH.ld
Utilities/STM32F407-Discovery/SW4STM32/STM32F429_439xx/: .cproject  STM32F439NIHx_FLASH.ld
Utilities/STM32F407-Discovery/SW4STM32/STM32F446xx/: .cproject
(+9 files in other folders)
